--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Kards</title>
+	<title>Menu</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
@@ -50,7 +50,7 @@
 					<ul class="main-navigation">
 						<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
 						<li><a class="smoothscroll"  href="#about" title="">Présentation</a></li>
-						<li><a class="smoothscroll"  href="#resume" title="">Resume</a></li>
+						<li><a class="smoothscroll"  href="#resume" title="">Curriculum vitae</a></li>
 						<li><a class="smoothscroll"  href="#portfolio" title="">Portfolio</a></li>					
 						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>				
 					</ul>
@@ -86,11 +86,8 @@
    	</div> <!-- /intro-content --> 
 
    	<ul class="intro-social">        
-         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-         <li><a href="#"><i class="fa fa-behance"></i></a></li>
-         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-         <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-         <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+         <li><a href="https://github.com/Hawadiaoune?tab=repositories"><i class="fa fa-github"></i></a></li>
+         <li><a href="http://www.linkedin.com/in/hawa-diaoune"><i class="fa fa-linkedin"></i></a></li>
       </ul> <!-- /intro-social -->      	
 
    </section> <!-- /intro -->
@@ -180,7 +177,7 @@
 
    	<div class="row button-section">
    		<div class="col-twelve">
-   			<a href="#contact" title="Contact" class="button stroke smoothscroll">Hire Me</a>
+   			<a href="#contact" title="Contact" class="button stroke smoothscroll">Contact</a>
    			<a href="CV Hawa DIAOUNE 2023.pdf-2.pdf" title="Download CV" class="button button-primary">Download CV</a>
    		</div>   		
    	</div>
@@ -195,7 +192,7 @@
 		<div class="row section-intro">
    		<div class="col-twelve">
 
-   			<h1>CV</h1>
+   			<h1>Curriculum vitae</h1>
 
 
    			<p class="lead"></p>
@@ -489,7 +486,7 @@
 
 			         <div class="link-box">
 			            <a href="https://github.com/Hawadiaoune/Booki.git">Lien GitHub</a>
-					      <a href="#" class="popup-modal-dismiss">Close</a>
+					      <a href="#" class="popup-modal-dismiss">Fermer</a>
 			         </div>		      
 
 				   </div> <!-- /modal-01 -->
@@ -509,7 +506,7 @@
 
 			         <div class="link-box">
 			            <a href="https://github.com/Hawadiaoune/Sophie-Bluel.git">Lien GitHub</a>
-					      <a href="#" class="popup-modal-dismiss">Close</a>
+					      <a href="#" class="popup-modal-dismiss">Fermer</a>
 			         </div>		      
 
 				   </div> <!-- /modal-02 -->
@@ -530,7 +527,7 @@
 
 			         <div class="link-box">
 			            <a href="https://github.com/Hawadiaoune/Kasa.git">Lien GitHub</a>
-					      <a href="#" class="popup-modal-dismiss">Close</a>
+					      <a href="#" class="popup-modal-dismiss">Fermer</a>
 			         </div>		      
 
 				   </div> <!-- /modal-03 -->
@@ -550,7 +547,7 @@
 
 			         <div class="link-box">
 
-					      <a href="#" class="popup-modal-dismiss">Close</a>
+					      <a href="#" class="popup-modal-dismiss">Fermer</a>
 			         </div>		      
 
 				   </div> <!-- /modal-04 -->
@@ -570,7 +567,7 @@
 
 			         <div class="link-box">
 			            <a href="http://www.behance.net">Details</a>
-					      <a href="#" class="popup-modal-dismiss">Close</a>
+					      <a href="#" class="popup-modal-dismiss">Fermer</a>
 			         </div>		      
 
 				   </div> <!-- /modal-05 -->
@@ -590,7 +587,7 @@
 
 			         <div class="link-box">
 			            <a href="http://www.behance.net">Details</a>
-					      <a href="#" class="popup-modal-dismiss">Close</a>
+					      <a href="#" class="popup-modal-dismiss">Fermer</a>
 			         </div>		      
 
 				   </div> <!-- /modal-06 -->
@@ -778,7 +775,7 @@
       			<fieldset>
 
                   <div class="form-field">
- 						   <input name="contactName" type="text" id="contactName" placeholder="Name" value="" minlength="2" required="">
+ 						   <input name="contactName" type="text" id="contactName" placeholder="Nom" value="" minlength="2" required="">
                   </div>
                   <div class="form-field">
 	      			   <input name="contactEmail" type="email" id="contactEmail" placeholder="Email" value="" required="">
@@ -792,7 +789,7 @@
                  <div class="form-field">
                      <button class="submitform">Envoyer</button>
                      <div id="submit-loader">
-                        <div class="text-loader">Sending...</div>                             
+                        <div class="text-loader">Envoi...</div>                             
        				      <div class="s-loader">
 								  	<div class="bounce1"></div>
 								  	<div class="bounce2"></div>
@@ -809,7 +806,7 @@
             </div>            
             <!-- contact-success -->
       		<div id="message-success">
-               <i class="fa fa-check"></i>Your message was sent, thank you!<br>
+               <i class="fa fa-check"></i>Votre message a été envoyé, merci!<br>
       		</div>
 
          </div> <!-- /col-twelve -->
@@ -881,16 +878,14 @@
      		<div class="col-six tab-full pull-right social">
 
      			<ul class="footer-social">        
-			      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-			      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-			      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+					<li><a href="https://github.com/Hawadiaoune?tab=repositories"><i class="fa fa-github"></i></a></li>
+					<li><a href="http://www.linkedin.com/in/hawa-diaoune"><i class="fa fa-linkedin"></i></a></li>
 			   </ul> 
 	      		
 	      </div>
 
       	<div class="col-six tab-full">
 	      	<div class="copyright">
-		        	<span>© Copyright Kards 2016.</span> 
 		        	<span>Design by <a href="#">Hawa Diaoune</a></span>	         	
 		         </div>		                  
 	      	</div>
