--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Contact" class="button stroke smoothscroll">Contact</a>
-   			<a href="CV Hawa DIAOUNE 2023.pdf-2.pdf" title="Download CV" class="button button-primary">Download CV</a>
+   			<a href="CV Hawa DIAOUNE 2023.pdf-2.pdf" title="Download CV" class="button button-primary">Télécharger CV</a>
    		</div>   		
    	</div>
 
