--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
    		<div class="top-bar">
    			<a class="menu-toggle" href="#"><span>Menu</span></a>
 
-	   		<div class="logo">
+	   		<div class="">
 		         <a href="index.html">MENU</a>
+
 		      </div>		      
 
 		   	<nav id="main-nav-wrap">
@@ -125,8 +126,8 @@
    					<span>Hawa DIAOUNE</span>
    				</li>
    				<li>
-   					<strong>Date de naissance:</strong>
-   					<span>Novembre 12, 1997</span>
+   					<strong>Âge:</strong>
+   					<span>26 ans</span>
    				</li>
 				   <li> 
 					<strong>Email:</strong>
@@ -178,7 +179,7 @@
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Contact" class="button stroke smoothscroll">Contact</a>
-   			<a href="CV Hawa DIAOUNE 2023.pdf-2.pdf" title="Download CV" class="button button-primary">Télécharger CV</a>
+   			<a href="CV Hawa DIAOUNE .pdf" title="Download CV" class="button button-primary">Télécharger CV</a>
    		</div>   		
    	</div>
 
