--- a/index.html
+++ b/index.html
@@ -888,7 +888,8 @@
 
       	<div class="col-six tab-full">
 	      	<div class="copyright">
-		        	<span>Design by <a href="#">Hawa Diaoune</a></span>	         	
+					<span>© Copyright Kards 2016.</span> 
+		        	<span>Design by <a href="http://www.styleshout.com/">Hawa DIAOUNE</a></span>        	
 		         </div>		                  
 	      	</div>
 
