--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/menumaker1000w.jpg" alt="Beetle">
+	               	<img src="images/portfolio/menumaker1000w.jpg" alt="Menu Maker">
 	                  <a href="#modal-04" class="overlay">                  	                 
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -441,13 +441,13 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="" alt="Lighthouse">
+	               	<img src="images/portfolio/ohmyfood.png" alt="Ohmyfood">
 	                  <a href="#modal-05" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Lighthouse</h3>	     					    
+	                     		<h3 class="folio-title">Oh My Food</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Web Development
+		     					       	  Création du site Ohmyfood Paris
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -501,7 +501,8 @@
 
 					   <div class="description-box">
 					      <h4>Sophie Bluel</h4>		      
-					      <p>Notre cliente, Sophie Bluel, a exprimé le souhait de créer un portfolio mettant en valeur ses divers projets d'architecture. J'ai été assigné à la conception et au développement de la partie front-end en utilisant JavaScript.J'ai été chargé de créer les fonctionnalités de la page de présentation, de la page de connexion de l'administrateur du site, ainsi que la modale permettant de télécharger de nouveaux médias. J'ai également travaillé sur la mise à jour dynamique du site sans nécessiter de rafraîchissement de la page en manipulant le DOM.</p>
+					      <p>Notre cliente, Sophie Bluel, a exprimé le souhait de créer un portfolio mettant en valeur ses divers projets d'architecture.</p> 
+						 <p> J'ai été assigné à la conception et au développement de la partie front-end en utilisant JavaScript.J'ai été chargé de créer les fonctionnalités de la page de présentation, de la page de connexion de l'administrateur du site, ainsi que la modale permettant de télécharger de nouveaux médias. J'ai également travaillé sur la mise à jour dynamique du site sans nécessiter de rafraîchissement de la page en manipulant le DOM.</p>
 
 					      <div class="categories">Projet de formation</div>			               
 					   </div>
@@ -521,8 +522,8 @@
 
 					   <div class="description-box">
 					      <h4>Kasa</h4>		      
-					      <p>Recrutée par Kasa, leader de la location d'appartements entre particuliers, en tant que freelance pour développer sa nouvelle plateforme web, j'ai été chargé de recoder entièrement le site en React. Le site initial, codé il y a plus de 10 ans en ASP.NET, nécessitait une mise à jour technologique pour répondre aux besoins actuels.
-							Dans ce projet, la problématique principale était de partir de la maquette fournie et de développer entièrement le front-end avec React et React Router Dom. Parmi les défis à relever figuraient la création de différentes routes dans le routeur, la mise en place de boîtes de texte ouvrables et refermables, la création d'un carrousel cyclique, et enfin, la gestion des redirections vers une page d'erreur en cas d'URL incorrecte. De plus, tout le site devait être conçu de manière à être responsive, assurant une expérience optimale sur tous les appareils.</p>
+					      <p>Recrutée par Kasa, leader de la location d'appartements entre particuliers, en tant que freelance pour développer sa nouvelle plateforme web, j'ai été chargé de recoder entièrement le site en React. Le site initial, codé il y a plus de 10 ans en ASP.NET, nécessitait une mise à jour technologique pour répondre aux besoins actuels.</p>
+						<p>Dans ce projet, la problématique principale était de partir de la maquette fournie et de développer entièrement le front-end avec React et React Router Dom. Parmi les défis à relever figuraient la création de différentes routes dans le routeur, la mise en place de boîtes de texte ouvrables et refermables, la création d'un carrousel cyclique, et enfin, la gestion des redirections vers une page d'erreur en cas d'URL incorrecte. De plus, tout le site devait être conçu de manière à être responsive, assurant une expérience optimale sur tous les appareils.</p>
 
 					      <div class="categories">Projet de formation</div>			               
 					   </div>
@@ -542,7 +543,8 @@
 
 					   <div class="description-box">
 					      <h4>Menu Maker By Qwenta</h4>		      
-					      <p>Qwenta, notre client, souhaite la création d'un outil nommé "Menu Maker", destiné à faciliter la mise en page et l'affichage des menus pour les restaurateurs. Ma responsabilité dans ce projet a été de préparer et de planifier les étapes à suivre.Dans le cadre de cette initiative Agile, plusieurs étapes ont été nécessaires. Tout d'abord, il a été indispensable de concevoir un système de veille efficace, pouvant être utilisé de manière récurrente par l'équipe. Ensuite, il a fallu procéder à la validation des spécifications techniques du projet en apportant des justifications claires quant aux choix effectués. Enfin, j'ai été chargé d'organiser la planification du projet à l'aide d'un logiciel tel que Notion, en utilisant des tableaux Kanban et un diagramme de Gantt, pour ensuite présenter l'ensemble de ces éléments au client.</p>
+					      <p>Qwenta, notre client, souhaite la création d'un outil nommé "Menu Maker", destiné à faciliter la mise en page et l'affichage des menus pour les restaurateurs.</p>
+						<p>Ma responsabilité dans ce projet a été de préparer et de planifier les étapes à suivre.Dans le cadre de cette initiative Agile, plusieurs étapes ont été nécessaires. Tout d'abord, il a été indispensable de concevoir un système de veille efficace, pouvant être utilisé de manière récurrente par l'équipe. Ensuite, il a fallu procéder à la validation des spécifications techniques du projet en apportant des justifications claires quant aux choix effectués. Enfin, j'ai été chargé d'organiser la planification du projet à l'aide d'un logiciel tel que Notion, en utilisant des tableaux Kanban et un diagramme de Gantt, pour ensuite présenter l'ensemble de ces éléments au client.</p>
 
 					      <div class="categories">Projet de formation</div>			               
 					   </div>
@@ -557,18 +559,20 @@
 				   <div id="modal-05" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-lighthouse.jpg" alt="" />
+				     		<img src="images/portfolio/modals/ohmyfood.png" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Lighthouse</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Ohmyfood</h4>		      
+					      <p>Ohmyfood est une entreprise de commande de repas en ligne. Notre concept permet aux utilisateurs de composer leur propre menu et de réduire leur temps d’attente dans les restaurants, car leur menu est préparé à l’avance. Plus de perte de temps à consulter la carte !</p>
+						<p>Ma missions a été de développer un site proposant le menu de 4 grands restaurants parisiens et Permettre la réservation en ligne et la composition de menus.
+						  </p>
 
 					      <div class="categories">Projet de formation</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="https://github.com/Hawadiaoune/Ohmyfood.git">Lien GitHub</a>
 					      <a href="#" class="popup-modal-dismiss">Fermer</a>
 			         </div>		      
 
@@ -577,7 +581,7 @@
 				   <div id="modal-06" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-salad.jpg" alt="" />
+				     		<img src="images/portfolio/modals/" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
