--- a/index.html
+++ b/index.html
@@ -461,9 +461,9 @@
 	                  <a href="#modal-06" class="overlay">
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Salad</h3>	     					    
+	                     		<h3 class="folio-title"></h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Branding
+		     					       	  
 		     					      </span>		     		
 		     					   </div>	                      	
 	                     </div>                    
