--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
 	               </div>
 	        		</div> <!-- /folio-item -->
 
-	            <div class="bgrid folio-item">
+	           <!-- <div class="bgrid folio-item">
 	               <div class="item-wrap">
 	               	<img src="" alt="Salad">
 	                  <a href="#modal-06" class="overlay">
@@ -468,7 +468,7 @@
 		     					   </div>	                      	
 	                     </div>                    
 	                  </a>
-	               </div>
+	               </div>--> 
 	        		</div> <!-- /folio-item -->   
 
 	            <!-- modal popups - begin
