--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
    			<div class="intro-info">
 
-   				<img src="images/Photo d’identité .png" alt="Profile Picture">
+   				<img src="https://github.com/Hawadiaoune/Portfolio/blob/main/images/Photo%20d’identité%20.png?raw=true" alt="Profile Picture">
 
    				<p class="lead">Bonjour, je suis Hawa DIAOUNE, développeuse web junior passionnée par les nouvelles technologies et la création numérique. Il y a quelque temps, j'ai découvert le monde du code et j'ai immédiatement été captivée par son potentiel infini. Convaincue de ma vocation, j'ai pris la décision audacieuse de me réorienter professionnellement vers le développement web. Pour concrétiser cette transition, j'ai suivi une formation diplômante approfondie auprès d'OpenClassrooms.</p>
    			</div>   			
@@ -290,7 +290,7 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Developpeur Intégrateur web</h3>
-	   					<p>Février 2023 - En cours</p>
+	   					<p>Février 2024</p>
 	   				</div>
 
 	   				<div class="timeline-content">
