--- a/index.html
+++ b/index.html
@@ -455,20 +455,20 @@
 	               </div>
 	        		</div> <!-- /folio-item -->
 
-	           <!-- <div class="bgrid folio-item">
+	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="" alt="Salad">
+	               	<img src="images/portfolio/ninacarducci1000w.jpg" alt="Nina-Carducci">
 	                  <a href="#modal-06" class="overlay">
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title"></h3>	     					    
+	                     		<h3 class="folio-title">Nina-Carducci</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  
+		     					       	  Optimisation du site d'une photographe
 		     					      </span>		     		
 		     					   </div>	                      	
 	                     </div>                    
 	                  </a>
-	               </div>--> 
+	               </div>
 	        		</div> <!-- /folio-item -->   
 
 	            <!-- modal popups - begin
@@ -496,7 +496,7 @@
 				   <div id="modal-02" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/sophiebluel1000w.jpg" alt="" />
+				     		<img src="images/portfolio/modals/sophiebluel1000w.jpg" alt="Sophie-Bluel" />
 				     	</div>      	
 
 					   <div class="description-box">
@@ -517,7 +517,7 @@
 				   <div id="modal-03" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/kasa1000w.jpg" alt="" />
+				     		<img src="images/portfolio/modals/kasa1000w.jpg" alt="Kasa" />
 				     	</div>      	
 
 					   <div class="description-box">
@@ -550,7 +550,7 @@
 					   </div>
 
 			         <div class="link-box">
-
+						<a href="https://github.com/Hawadiaoune/Menu-Maker-by-Qwenta.git">Lien GitHub</a>
 					      <a href="#" class="popup-modal-dismiss">Fermer</a>
 			         </div>		      
 
@@ -559,7 +559,7 @@
 				   <div id="modal-05" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/ohmyfood.png" alt="" />
+				     		<img src="images/portfolio/modals/ohmyfood.png" alt="Ohmyfood" />
 				     	</div>      	
 
 					   <div class="description-box">
@@ -581,18 +581,18 @@
 				   <div id="modal-06" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/" alt="" />
+				     		<img src="images/portfolio/modals/ninacarducci1000w.jpg" alt="Nina-Carducci" />
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4></h4>		      
-					      <p></p>
+					      <h4>Nina Carducci</h4>		      
+					      <p>Nina Carducci dispose d'un portfolio contenant un grand nombre d'images. Son site présente des lacunes en termes d'optimisation et des problèmes de fonctionnement sont observés. À la suite d'un audit approfondi, je lui recommande d'optimiser les images, de réviser le code et la structure de son site, et de corriger les bugs détectés.</p>
 
 					      <div class="categories">Projet de formation</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="https://github.com/Hawadiaoune/Nina-Carducci.git">Lien GitHub</a>
 					      <a href="#" class="popup-modal-dismiss">Fermer</a>
 			         </div>		      
 
